seperate user api from default api, change user api name
